@@ -1,5 +1,7 @@
 [B]0.9.15[/B]
 Add widget categories text option (wider categories widget)
+Change premiered to year for movies
+Rearrange info line so duration is next to end time
 
 [B]0.9.14[/B]
 LEIA - add extrathumbs to images in info dialog
